--- a/packages/express-backend/package.json
+++ b/packages/express-backend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "backend.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon backend.js export DEBUG='express:router'",
     "start": "node backend.js export DEBUG='express:router'"
   },
@@ -12,7 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.0"
   }
-  
 }
